// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmployerPageDetails /> renders using an employer record 1`] = `
<div
  className="EmployerPageDetails__Container"
>
  <div
    className="EmployerPageDetails__Header"
  >
    <img
      className="EmployerLogo__Image"
      src="/images/employers/consoto.svg"
      style={
        Object {
          "background": "#fff",
        }
      }
    />
    <h1
      className="EmployerPageDetails__Title"
    >
      Contoso
    </h1>
    <div
      className="EmployerPageDetails__Rating EmployerPageDetails__Rating--fair"
    >
      ƒáïř
      <i
        className="material-icons"
      >
        trending_flat
      </i>
    </div>
  </div>
  <div
    className="EmployerPageDetails__Summary"
  >
    <p>
      Contoso is a good company.
    </p>
  </div>
  [component: EmployerCitationList citations=([object Object],[object Object],[object Object]) /]
  <div
    className="EmployerPageDetails__MetaFooter"
  >
    <div
      className="EmployerPageDetails__Profile"
    >
      <h2 />
      <table
        className="EmployerPageDetails__ProfileDetails"
      >
        <tbody>
          <tr>
            <td
              className="EmployerPageDetails__ProfileLabel"
              title="ñá₥è"
            >
              <i
                className="material-icons"
              >
                work
              </i>
            </td>
            <td
              className="EmployerPageDetails__ProfileValue"
            >
              Contoso
            </td>
          </tr>
          <tr>
            <td
              className="EmployerPageDetails__ProfileLabel"
              title="ℓôçáƭïôñ"
            >
              <i
                className="material-icons"
              >
                place
              </i>
            </td>
            <td
              className="EmployerPageDetails__ProfileValue"
            >
              City, us (Multinational)
              <img
                className="EmployerPageDetails__ProfileFlag"
                src="/images/flags/us.svg"
              />
            </td>
          </tr>
          <tr>
            <td
              className="EmployerPageDetails__ProfileLabel"
              title="è₥ƥℓô¥èèƨ"
            >
              <i
                className="material-icons"
              >
                people
              </i>
            </td>
            <td
              className="EmployerPageDetails__ProfileValue"
            >
              ~10,123 (2017)
              <span
                className="EmployerPageDetails__Delta EmployerPageDetails__Delta--Negative"
              >
                (
                è₥ƥℓô¥èèÐèℓƭá: -2,222 / 2015
                )
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      className="EmployerPageDetails__LinkedCompanies"
    />
  </div>
</div>
`;

exports[`<EmployerPageDetails /> renders without exploding 1`] = `
<div
  className="EmployerPageDetails__Container"
>
  <div
    className="EmployerPageDetails__Header"
  >
    <h1
      className="EmployerPageDetails__Title"
    >
      
    </h1>
    <div
      className="EmployerPageDetails__Rating EmployerPageDetails__Rating--fair"
    >
      ƒáïř
      <i
        className="material-icons"
      >
        trending_flat
      </i>
    </div>
  </div>
  <div
    className="EmployerPageDetails__Summary"
  />
  [component: EmployerCitationList citations=() /]
  <div
    className="EmployerPageDetails__MetaFooter"
  >
    <div
      className="EmployerPageDetails__Profile"
    >
      <h2 />
      <table
        className="EmployerPageDetails__ProfileDetails"
      >
        <tbody>
          <tr>
            <td
              className="EmployerPageDetails__ProfileLabel"
              title="ñá₥è"
            >
              <i
                className="material-icons"
              >
                work
              </i>
            </td>
            <td
              className="EmployerPageDetails__ProfileValue"
            >
              
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      className="EmployerPageDetails__LinkedCompanies"
    />
  </div>
</div>
`;
